--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "brcypt": "^1.0.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
   }
